# wgsocks

./: .gitignore  Cargo.toml  README.md  clippy.toml  config.example.json
src/: config.rs  main.rs  socks.rs
src/wg_device/: mod.rs  recv.rs  send.rs
