[package]
name = "wgsocks"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13.0"
boringtun = "0.5.2"
managed = { version = "0.8.0", features = ["std", "map"] }
rand = "0.8.5"
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
smoltcp = { version = "0.8.1", default-features = false, features = ["socket-tcp", "proto-ipv4", "proto-ipv6", "medium-ip", "std", "log"] }

# todo: remove after https://github.com/cloudflare/boringtun/pull/312 gets merged and released
[dependencies.x25519-dalek]
version = "2.0.0-pre.1"
features = ["reusable_secrets"]
